# cymraeg-english-open-argos-models

./: .gitattributes  LICENSE  README.md  pyproject.toml  translate-cy_en-1_9.argosmodel  translate-en_cy-1_9.argosmodel
transformers-import/: .gitignore  Makefile  en-cy.argosmodel
transformers-import/argos-package-metadata/: README.md  config.json  metadata.json
